src/Css/portfolio.css
.background {
  position: absolute;
  z-index: -1;
  width: 100vw;
  height: 100vh;
  background-size: cover;
  filter: brightness(0.8);
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.6)
    ),
    url("./codingBG1.jpg");
}
.info {
  width: 100%;
  height: min-content;
  color: black;
  font-weight: 500;
}
.carousel-item,
.carousel-item.active {
  align-items: center;
}
.carousel-item > img {
  width: 100%;
}
#picrow {
  justify-content: center;
  overflow: scroll;
  margin-top: 24px;
}

::-webkit-scrollbar {
  width: 8px;
  height: 3px;
}
.scroll {
  color: violet;
  display: inline-block;
  margin-right: 29px;
  font-weight: 600;
  font-size: 19px;
}
.sicon {
  margin-right: 4px;
  font-weight: 400;
}
.langtit {
  color: cornsilk;
  margin-left: 28px;
}

